# md2pdf

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
examples/: cotizacion_kolff.md
examples/cotizacion_kolff.assets/: mermaid_597234efa7.mmd
src/md2pdf/app/services/: branding_service.py  chart_service.py  diagram_service.py  grammar_service.py  summarizer_service.py
src/md2pdf/app/usecases/: generate_pdf.py  improve_writing.py  organize_documents.py  summarize_document.py
src/md2pdf/domain/: entities.py
src/md2pdf/domain/ports/: ai_provider.py  diagram_engine.py  markdown_parser.py  renderer_pdf.py  storage_repo.py
src/md2pdf/infra/ai/: langtool_provider.py  openai_provider.py
src/md2pdf/infra/charts/: matplotlib_engine.py
src/md2pdf/infra/diagrams/: mermaid_engine.py  plantuml_engine.py
src/md2pdf/infra/parsers/: markdownit_parser.py
src/md2pdf/infra/renderers/: html_renderer.py  pdf_renderer.py
src/md2pdf/infra/storage/: local_fs_repo.py
src/md2pdf/interfaces/: api.py  cli.py
src/md2pdf/interfaces/web/templates/: index.html
tests/: conftest.py  test_cli.py  test_generate_pdf.py  test_markdown_parser.py
themes/default/: base.html.j2  styles.css  theme.yaml
themes/kolff/: base.html.j2  theme.yaml
